--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CyEngine/vendor/spdlog"]
 	path = CyEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "CyEngine/vendor/glfw"]
+	path = CyEngine/vendor/glfw
+	url = https://github.com/TheCherno/glfw
