--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CyEngine/vendor/glfw"]
 	path = CyEngine/vendor/glfw
 	url = https://github.com/TheCherno/glfw
+[submodule "CyEngine/vendor/imgui"]
+	path = CyEngine/vendor/imgui
+	url = https://github.com/TheCherno/imgui
