--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "CyEngine/vendor/imgui"]
 	path = CyEngine/vendor/imgui
 	url = https://github.com/TheCherno/imgui
+[submodule "CyEngine/vendor/glm"]
+	path = CyEngine/vendor/glm
+	url = https://github.com/g-truc/glm
