--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=627,8
+ViewportPos=1156,408
+ViewportId=0xE927CF2F
 Size=527,538
 Collapsed=0
 
@@ -17,4 +18,12 @@ Collapsed=0
 Pos=60,60
 Size=520,600
 Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Docking][Data]
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=34,76 Size=1280,701 CentralNode=1
 
