--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,26 +4,62 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1156,408
-ViewportId=0xE927CF2F
-Size=527,538
+Pos=8,27
+Size=440,685
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+ViewportPos=907,354
+ViewportId=0xBF126D42
+Size=960,318
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
-Size=520,600
+Pos=0,402
+Size=1280,318
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
+[Window][Example: Property editor]
+Pos=1490,38
+Size=430,971
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Inspector]
+Pos=881,27
+Size=391,685
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Editor]
+Pos=0,19
+Size=1280,701
+Collapsed=0
+
+[Window][Output]
+Pos=8,450
+Size=871,262
+Collapsed=0
+DockId=0x00000004,0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=34,76 Size=1280,701 CentralNode=1
+DockSpace       ID=0x3BC79352 Pos=350,170 Size=1280,701 Split=X
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=960,486 CentralNode=1
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=430,486 Selected=0xE7652686
+DockSpace       ID=0x582DCB9B Window=0xCB5DF48C Pos=94,136 Size=1264,685 Split=X Selected=0xE7039252
+  DockNode      ID=0x00000001 Parent=0x582DCB9B SizeRef=1511,685 Split=X Selected=0xE87781F4
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=440,290 Selected=0xE87781F4
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=445,290 Split=Y
+      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1511,710 CentralNode=1
+      DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=1511,262 Selected=0x0D42FFB9
+  DockNode      ID=0x00000002 Parent=0x582DCB9B SizeRef=391,685 Selected=0xE7039252
 
