--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -31,19 +31,19 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1521,27
-Size=391,974
+Pos=881,27
+Size=391,685
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Editor]
 Pos=0,19
-Size=1920,990
+Size=1280,701
 Collapsed=0
 
 [Window][Output]
-Pos=8,739
-Size=1511,262
+Pos=8,450
+Size=871,262
 Collapsed=0
 DockId=0x00000004,0
 
@@ -54,10 +54,10 @@ Size=935,572
 Collapsed=0
 
 [Window][Viewport]
-Pos=8,27
-Size=1511,710
+ViewportPos=103,1
+ViewportId=0x995B0CF8
+Size=1730,970
 Collapsed=0
-DockId=0x00000003,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
@@ -67,7 +67,7 @@ Column 1  Weight=1.0000
 DockSpace       ID=0x3BC79352 Pos=350,170 Size=1280,701 Split=X
   DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=960,486 CentralNode=1
   DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=430,486 Selected=0xE7652686
-DockSpace       ID=0x582DCB9B Window=0xCB5DF48C Pos=8,50 Size=1904,974 Split=X Selected=0xE7039252
+DockSpace       ID=0x582DCB9B Window=0xCB5DF48C Pos=221,222 Size=1264,685 Split=X Selected=0xE7039252
   DockNode      ID=0x00000001 Parent=0x582DCB9B SizeRef=1511,685 Split=X Selected=0xE87781F4
     DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=440,290 Selected=0xE87781F4
     DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=445,290 Split=Y
