--- a/CyEngine/CyEngine.vcxproj.filters
+++ b/CyEngine/CyEngine.vcxproj.filters
@@ -1382,6 +1382,8 @@
     <ClInclude Include="src\CyEngine\Renderer\Camera.h" />
     <ClInclude Include="src\CyEngine\Renderer\PerspectiveCamera.h" />
     <ClInclude Include="src\CyEngine\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\CyEngine\Maths\Vector.h" />
+    <ClInclude Include="src\CyEngine\Maths\Colour.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CyEngine\Application.cpp">
@@ -1439,5 +1441,7 @@
     <ClCompile Include="src\CyEngine\Renderer\Camera.cpp" />
     <ClCompile Include="src\CyEngine\Renderer\PerspectiveCamera.cpp" />
     <ClCompile Include="src\CyEngine\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\CyEngine\Maths\Vector.cpp" />
+    <ClCompile Include="src\CyEngine\Maths\Colour.cpp" />
   </ItemGroup>
 </Project>
