--- a/CyEngine/CyEngine.vcxproj.filters
+++ b/CyEngine/CyEngine.vcxproj.filters
@@ -1386,6 +1386,7 @@
     <ClInclude Include="src\CyEngine\Maths\Maths.h" />
     <ClInclude Include="src\CyEngine\Maths\Vector.h" />
     <ClInclude Include="src\CyEngine\Maths\Quat.h" />
+    <ClInclude Include="src\CyEngine\Maths\Matrix.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CyEngine\Application.cpp">
@@ -1446,5 +1447,6 @@
     <ClCompile Include="src\CyEngine\Maths\Colour.cpp" />
     <ClCompile Include="src\CyEngine\Maths\Vector.cpp" />
     <ClCompile Include="src\CyEngine\Maths\Quat.cpp" />
+    <ClCompile Include="src\CyEngine\Maths\Matrix.cpp" />
   </ItemGroup>
 </Project>
