--- a/CyEngine/CyEngine.vcxproj
+++ b/CyEngine/CyEngine.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="src\CyEngine\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\CyEngine\Renderer\PerspectiveCamera.h" />
     <ClInclude Include="src\CyEngine\Renderer\Camera.h" />
+    <ClInclude Include="src\CyEngine\Transform.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\CyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\CyEngine\Renderer\RenderCommand.h" />
@@ -615,6 +616,7 @@
     <ClCompile Include="src\CyEngine\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\CyEngine\Renderer\PerspectiveCamera.cpp" />
     <ClCompile Include="src\CyEngine\Renderer\Camera.cpp" />
+    <ClCompile Include="src\CyEngine\Transform.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\CyEngine\Renderer\Buffer.cpp" />
     <ClCompile Include="src\CyEngine\Renderer\RenderCommand.cpp" />
